--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,12 @@
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
-
-spring.datasource.url=jdbc:h2:mem:cloudstorage
-spring.servlet.multipart.max-file-size=10MB
+spring:
+  datasource:
+    url: jdbc:h2:./app
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+  servlet:
+    multipart:
+      max-request-size: 20MB
+      max-file-size: 20MB
